--- a/src/app/components/image-editor/image-editor.component.scss
+++ b/src/app/components/image-editor/image-editor.component.scss
@@ -1,6 +1,6 @@
 :host {
   font-family: "Noto Sans Thai", sans-serif !important;
-  touch-action: manipulation;
+  touch-action: none;
 }
 
 .canvas-container {
@@ -71,7 +71,7 @@
   align-items: center;
   box-sizing: border-box;
 
-  touch-action: manipulation;
+  touch-action: none;
 
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -90,7 +90,7 @@
   align-items: center;
   box-sizing: border-box;
 
-  touch-action: manipulation;
+  touch-action: none;
 
   -webkit-user-select: none;
   -khtml-user-select: none;
